@@ -1,5 +1,12 @@
 2001-10-19  Radek Doulik  <rodo@ximian.com>
 
+	* gtkhtml.c (expose): do simple draw as engine now handles frozen
+	state by itself
+
+	* htmlengine.c (html_engine_draw_real): renamed from
+	html_engine_draw
+	(html_engine_draw): handle frozen draws
+
 	* htmlclueflow.c (op_helper): remove slaves only when cut or in
 	copy result
 
